# spin_glass_solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  run.py
async/: readers_writer_lock.hpp  solver_manager.hpp  solver_wrapper.h  solver_wrapper.hpp
attic/: solver_wrapper.cxx
benchmarks/2014-02-12/: 2014-02-12-macbook.xlsx
benchmarks/2015-02-21/: 2015-02-21-bgas.xlsx  2015-02-21-sa_solve.csv
benchmarks/2015-02-23-sharedH/: 2015-02-23-bgas-sharedH.csv  2015-02-23-bgas-sharedH.xlsx
benchmarks/2015-02-23-uniqueH/: 2015-02-23-bgas-uniqueH.csv  2015-02-23-bgas-uniqueH.xlsx
cmake/: add_definition.cmake  config_defines.hpp.in  generate_jobs.cmake  slurm-benchmark.sh.in
plot/: data_analysis_and_plot.py
scripts/: add_nodes-bgas.sh  add_nodes-monch.sh  add_nodes.sh
src/: CommandCapture.cpp  CommandCapture.h  RdmaLogging.h  hamiltonian.cpp  hamiltonian.hpp  heartbeat.cpp  main.cpp  result.cpp  result.hpp  sa_solver.cpp  sa_solver.hpp  scheduler.hpp  scheduler_test.cpp  single_thread.cpp  test_readers_writer_lock.cpp
src/kwsys/: Configure.h  EncodingC.c  ProcessUNIX.c  ProcessWin32.c  System.h  kwsys_Process.h
testdata/Instances128Spins/: GroundStateEnergy128Spins.txt
testdata/Instances128Spins/lattice/: 128random0.lat  128random1.lat  128random10.lat  128random100.lat  128random101.lat  128random102.lat  128random103.lat  128random104.lat  128random105.lat  128random106.lat  128random107.lat  128random108.lat  128random109.lat  128random11.lat  128random110.lat  128random111.lat  128random112.lat  128random113.lat  128random114.lat  128random115.lat  128random116.lat  128random117.lat  128random118.lat  128random119.lat  128random12.lat  128random120.lat  128random121.lat  128random122.lat  128random123.lat  128random124.lat  128random125.lat  128random126.lat  128random127.lat  128random128.lat  128random129.lat  128random13.lat  128random130.lat  128random131.lat  128random132.lat  128random133.lat  (+960 more)
